syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "AbilityScalarType.proto";
import "AbilityString.proto";

message AbilityScalarValueEntry {
	AbilityString key = 1;
	AbilityScalarType value_type = 2;
	oneof value {
		float float_value = 3;
		string string_value = 4;
		int32 int_value = 5;
		uint32 uint_value = 6;
	}
}
